--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
           <div class="field">
             <div class="control">
-              <input type="submit" value="Connexion" class="button is-primary login-section--form-submit">
+              <input type="submit" value="Connexion" class="button is-primary semi-bordered login-section--form-submit">
             </div>
           </div>
           <a href="#" class="login-section--form-forgot">Mot de passe oublié ?</a>
